--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
 * {
     box-sizing: border-box;
-
-
 }
 
 body {
-    background-color: rgb(199, 203, 207);
+    background-color: #efeef1;;
 }
 
 .head img {
@@ -16,6 +14,7 @@ body {
 .watch {
     padding: 30px;
     text-align: center;
+    background-color: #eceaee;
 }
 
 .head .btn {
@@ -32,7 +31,7 @@ body {
 
 .middle {
     background-color: #efeef1;
-    padding: 50px;
+    padding: 30px;
 
 }
 
@@ -98,10 +97,29 @@ p {
     color: rgb(107, 104, 107);
     text-decoration: none;
 }
-
+/*small*/
+@media (max-width:568px){
+    .head img{
+        height:30%;
+    }
+    .middle li{
+        font-size:15px;
+    }
+    p{
+        font-size:15px;
+    }
+    .head .btn {
+        width: 50%;
+        height: 7%;
+    
+    }
+}
 /*Mobile Devices*/
 @media (max-width: 768px) {
     h1{
+        text-align: center;
+    }
+    h5{
         text-align: center;
     }
     h2{
