--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,10 @@ p {
     color: rgb(107, 104, 107);
     text-decoration: none;
 }
+.carousel-control-next, .carousel-control-prev {
+  
+    top: 10%;
+}
 
 /*Ipad*/
 @media (max-width: 992px) {
