--- a/styles.css
+++ b/styles.css
@@ -68,14 +68,17 @@ li {
 
 .two {
     float: right;
-    text-align: right
+    margin-left: 30px;;
+    
 }
 
 p {
     line-height: 2;
 }
-
-
+.monica{
+    text-align: left;
+    margin-top:-50px;
+}
 .memebody {
     background-color: rgb(154, 161, 167);
 }
@@ -179,10 +182,21 @@ p {
         border-radius: 10%;
         margin: 0px auto 20px auto;
     }
+    .carousel-item img {
+        width: 90%;
+        height: 60%;
+        margin: auto;
+    }
+    
 }
-@media (max-width:420px) {
+@media (max-width:450px) {
     .cast-row img {
         width: 50%;
         height: 25%;
+    }
+    .carousel-item img {
+        width: 90%;
+        height: 55%;
+        margin: auto;
     }
 }
